--- a/source/frontend/src/home/home-upload.html
+++ b/source/frontend/src/home/home-upload.html
@@ -37,7 +37,7 @@
                           </div>
                               <div class="col-md-12">
                                 <button type="submit" class="btn btn-default">Importar con estas definiciones</button>
-                                <button type="button" class="btn btn-link" ui-sref="home">Cancelar</button>
+                                <button type="button" class="btn btn-link" ui-sref="home.tree">Cancelar</button>
                               </div>
 
                             </div>
