--- a/source/frontend/src/login/login.html
+++ b/source/frontend/src/login/login.html
@@ -10,14 +10,15 @@
             <div class="panel panel-default">
               <div class="panel-heading text-center">Iniciá sesión</div>
               <div class="panel-body">
+                <div id="notificationLogin"></div>
                 <form ng-submit="loginCtrl.login()" id="login" name="loginCtrl.form">
                   <div class="form-group">
                       <label for="exampleInputEmail1">Correo electrónico</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Ingresar correo electrónico" ng-model="loginCtrl.email">
+                      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Ingresar correo electrónico" ng-model="loginCtrl.email" required>
                   </div>
                   <div class="form-group">
                    <label for="InputPasword">Contraseña</label>
-                    <input type="password" class="form-control" id="InputPasword" placeholder="Ingresar Contraseña" ng-model="loginCtrl.password">
+                    <input type="password" class="form-control" id="InputPasword" placeholder="Ingresar Contraseña" ng-model="loginCtrl.password" required>
                   </div>
                   <div class="form-group" ng-show="loginCtrl.numberOfAttempts >= loginCtrl.maxNumberOfAttempts">
                     <div vc-recaptcha ng-model="loginCtrl.captcha"></div>
