--- a/source/configuracion/ui/proyectosba/index.html
+++ b/source/configuracion/ui/proyectosba/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html ng-app="app" >
+<html >
 <head>
     <meta charset="UTF-8">
     <script src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit&hl=es" async defer></script>
-    <title>ProyectosBA</title>
+    <title>Gobierno de la Ciudad de Buenos Aires</title>
     
     <link rel="shortcut icon" href="favicon.ico">
     
@@ -16,7 +16,7 @@
 <div ui-view="baheader"></div>
 <footer>
     <div class="footer">
-        <div class="container">
+        <div class="container contentApp">
             <div class="row">
                 <div class="col-md-6 col-sm-6" id="footer">
                     <a class="navbar-brand bac-footer" href="http://www.buenosaires.gob.ar" target="_blank">Buenos Aires Ciudad</a>
