--- a/source/frontend/index.html
+++ b/source/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app" {% if(o.htmlWebpackPlugin.files.manifest) { %} manifest="{%= o.htmlWebpackPlugin.files.manifest %}"
+<html {% if(o.htmlWebpackPlugin.files.manifest) { %} manifest="{%= o.htmlWebpackPlugin.files.manifest %}"
       {% } %}>
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@
 <div ui-view="baheader"></div>
 <footer>
     <div class="footer">
-        <div class="container">
+        <div class="container contentApp">
             <div class="row">
                 <div class="col-md-6 col-sm-6" id="footer">
                     <a class="navbar-brand bac-footer" href="http://www.buenosaires.gob.ar" target="_blank">Buenos Aires Ciudad</a>
