--- a/source/frontend/src/home/form-operative-objective.html
+++ b/source/frontend/src/home/form-operative-objective.html
@@ -1,35 +1,16 @@
+<div class="contentNewProyect">{{formCtrl.title}}</div>
 <div id="grupo-level-3-3" class="contentFormProyect collapse in" aria-expanded="true">
-    <div class="col-md-2 col-sm-2 col-xs-12 pull-right">
-        <!-- <div class="dropdown content-actionForm">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                <i class="glyphicon glyphicon-th-list" aria-hidden="true"></i>
-                <span class="caret"></span>
-                <span class="" style="font-size: 11px;">Mover</span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li class="titleMenu">Plan 2017</li>
-                <li><a href="#">Obj. Estratégico 1</a></li>
-                <li><a href="#">Obj. Estratégico 2</a></li>
-            </ul>
-        </div> -->
-        <div id="{{formCtrl.currentOperativeObjective.idObjetivoOperativo}}"></div>
-        <div class="dropdown content-actionForm" ng-show="formCtrl.currentOperativeObjective.idObjetivoOperativo">
-            <button class="btn btn-default" type="button" data-toggle="modal" data-target="#alertModalId" ng-click="formCtrl.deleteOperativeObjective(formCtrl.currentOperativeObjective.idObjetivoOperativo)">
-                <i class="glyphicon glyphicon-remove" aria-hidden="true"></i>
-                <span class="" style="font-size: 11px;">Eliminar</span>
-            </button>
-        </div>
-    </div>
-    <div class="col-md-10 col-sm-10 col-xs-12">
+    <div class="col-md-12 col-sm-12 col-xs-12 ">
         <form role="form" ng-submit="formCtrl.saveOperativeObjective()">
-            <div class="row">
-                <div class="form-group col-md-12">
+                <div class="form-group col-md-12 agrupador">
                     <label for="name">Nombre de Objetivo Operativo</label>
-                    <input type="text" class="form-control" id="name" placeholder="Ingresar nombre" ng-model="formCtrl.currentOperativeObjective.nombre" required>
+                    <input type="text" class="form-control form-group" id="name" placeholder="Ingresar nombre" ng-model="formCtrl.currentOperativeObjective.nombre" required>
                 </div>
-            </div>
-            <button type="submit" class="btn btn-success"><i class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></i> Guardar Objetivo Operativo</button>
-            <button type="button" class="btn btn-link" ng-click="formCtrl.cancelOperativeObjective()">Cancelar y descartar cambios</button>
+            <button type="submit" class="btn btn-success">Guardar Objetivo Operativo</button>
+            <button class="btn btn-default btnRemove right" type="button" data-toggle="modal" data-target="#alertModalId" ng-click="formCtrl.deleteOperativeObjective(formCtrl.currentOperativeObjective.idObjetivoOperativo)">
+               Eliminar
+            </button>
+            <button type="button" class="btn btn-default right" ng-click="formCtrl.cancelOperativeObjective()">Cancelar cambios</button>
         </form>
     </div>
 </div>
