--- a/source/frontend/src/home/home-upload.html
+++ b/source/frontend/src/home/home-upload.html
@@ -3,15 +3,20 @@
         <div class="row">
             <div class="col-md-12">
                 <h2 class="title-year">Plan 2017</h2>
+                <excelcomponent></excelcomponent>
                 <div style="clear:both;"></div>
                  <div class="row">
                     <div class="col-md-12">
                         <p class="title-import-excel">Importar Excel</p>
-                        <hr>
+                        <div class="alert alert-info left">Tenes que descargar el excel maestro para poder importar proyectos desde Excel 
+                        <button type="submit" class="btn btn-default right">
+                        <img src="../../assets/icono-xls.png"> Descargar Excel maestro</button>
+                        </div>
                     </div>
+
                     <form name="fileform" ng-submit="homeCtrl.submit(fileform)">
                       <div class="col-md-12">
-                        <input type="file" id="archivoAImportar" style="margin-left:10px;">
+                        <input type="file" id="archivoAImportar">
                         <hr>
                         <!-- <div ng-model="homeCtrl.archivoAImportar" class="content-import">
                           <p>Arrastrar a este recuadro el archivo a importar</p>
@@ -22,7 +27,7 @@
                               <div class="radio" ng-init="homeCtrl.pisarProyectos">
                                 <label class="option">
                                   <input type="radio" name="pisarProyectos" id="pisarProyectos" data-ng-value="false" ng-model="homeCtrl.pisarProyectos">
-                                  <p class="title-help">Preservar los datos existentes en el sistema</p>
+                                  <p class="title-help">Ignorar los repetidos e importar solo los nuevos.</p>
                                   <!-- <p>Conservar datos existentes en POA, incorporando los nuevos datos presentes en el archivo. Se empleará la columna "Cod. Identificación" de los datos del archivo, para identificar a qué proyectos corresponde cada fila de nuevos datos.</p> -->
                                 </label>
                               </div>
